# lobster-local

./: .dockerignore  .env.example  .gitignore  .pip-check-reqs-ignore  .pre-commit-config.yaml  2025-09-09-you-are-the-worlds-best-software-engineer-your-ma.txt  2025-09-16-you-are-the-worlds-best-test-writer-my-project-cu.txt  AGENTS.md  AGENT_DATA_QC_CHECKLIST.md  AGENT_DATA_QC_CHECKLIST_report.md  AWS_DEPLOYMENT_GUIDE.md  AWS_FARGATE_DEPLOYMENT_GUIDE.md  AWS_FIXES_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLOUD_NEXT_STEPS.md  CLOUD_USAGE_GUIDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.streamlit  Dockerfile_R  GSM6204591.txt  INSTALLATION.md  INTEGRATION_TEST_EXECUTIVE_SUMMARY.md  INTEGRATION_TEST_SUMMARY.md  LAUNCH_READY_SUMMARY.md  LICENSE  LOBSTER_PROJECT_SUMMARY_FOR_CLOUD_BACKEND.md  Makefile  NEXT_AGENT_INSTRUCTIONS.md  README.md  README_AI.md  README_FULL.md  README_UI.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  STREAMLIT_README.md  STRIPE_INTEGRATION.md  TESTING_REPORT.md  TEST_REPORT_GSE134520.md  (+43 more)
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependency-updates.yml  deploy-to-aws.yml  deploy.yml  pr-validation.yml  release.yml
@kevin_notes/: databiomix_implementation_plan.md
app/: __init__.py  ui.py
claude-skill/: README.md  SKILL.md  install.sh
clients/: __init__.py  agent_client.py
config/: README_CONFIGURATION.md  agent_config.py  config_manager.py  settings.py
docker/: Dockerfile.api
docs/: AGENT_GUIDED_FORMULA_CONSTRUCTION.md  API_DOCUMENTATION.md  GEO_PROVIDER_GUIDE.md  MANUAL_ANNOTATION_SERVICE.md  architecture_diagram.md  testing.md  workflow_validation_report.md
docs/wiki/: 01-getting-started.md  02-installation.md  03-configuration.md  04-user-guide-overview.md  05-cli-commands.md  06-data-analysis-workflows.md  07-data-formats.md  09-creating-agents.md  10-creating-services.md  11-creating-adapters.md  12-testing-guide.md  14-core-api.md  15-agents-api.md  17-interfaces-api.md  19-agent-system.md  22-performance-optimization.md  23-tutorial-single-cell.md  24-tutorial-bulk-rnaseq.md  25-tutorial-proteomics.md  26-tutorial-custom-agent.md  27-examples-cookbook.md  28-troubleshooting.md  29-faq.md  32-agent-guided-formula-construction.md  33-api-documentation.md  34-architecture-diagram.md  Home.md  README.md
examples/: README.md  basic_single_cell.py  download_queue_workspace_demo.py
lobster/: __init__.py  __main__.py  _version.py  cli.py  main.py  streamlit_app.py  version.py
lobster-cloud/: setup.py
lobster-cloud/lobster_cloud/: client.py
lobster-core/: setup.py
lobster-core/interfaces/: backend.py  validator.py
lobster-core/lobster_core/: __init__.py
lobster-core/schemas/: proteomics.py
lobster-local/: setup.py
lobster-local/agents/: data_expert.py  data_expert_assistant.py  graph.py  method_expert.py  proteomics_expert.py  research_agent.py  singlecell_expert.py  supervisor.py
lobster-local/cdk/: cdk_stack.py
lobster-local/config/: README_CONFIGURATION.md  README_THINKING.md  agent_config.py  genie_ai.code-workspace
lobster-local/core/: client.py  data_manager_old.py  provenance.py  websocket_callback.py  websocket_logging_handler.py
lobster-local/tools/: clustering_service.py  geo_downloader.py  geo_service.py  quality_service.py
lobster-local/utils/: file_naming.py  json_extractor.py  logger.py
lobster-server/: lambda_function.py  requirements.txt
lobster/agents/: affinity_proteomics_expert.py  bulk_rnaseq_expert.py  data_expert.py  data_expert_assistant.py  draw_graph.py  graph.py  machine_learning_expert.py  metadata_assistant.py  method_expert.py  ms_proteomics_expert.py  protein_structure_visualization_expert.py  research_agent.py  research_agent_assistant.py  singlecell_expert.py  state.py  supervisor.py  transcriptomics_expert.py  transcriptomics_expert_SPLIT.py  visualization_expert.py
lobster/api/: __init__.py  file_service.py  main.py  middleware.py  models.py  session_manager.py  websocket.py
lobster/cli_internal/: __init__.py
lobster/config/: README_CONFIGURATION.md  README_THINKING.md  __init__.py  agent_capabilities.py  agent_config.py  agent_config_comprehensive.py  agent_registry.py  base_config.py  config_manager.py  constants.py  disease_ontology.json  global_config.py  llm_factory.py  model_service.py  ollama_service.py  provider_setup.py  settings.py  ssl_setup.py  subscription_tiers.py  supervisor_config.py  version_check.py  workspace_config.py
lobster/core/: __init__.py  analysis_ir.py  api_client.py  archive_utils.py  client.py  component_registry.py  config_resolver.py  data_manager.py  data_manager_v2.py  download_queue.py  exceptions.py  extraction_cache.py  (+14 more)
lobster_cloud/: __init__.py  client.py
scripts/: ecs-task-definition.json  fargate-iam-policies.json  fix-aws-permissions.sh  github-actions-policy.json  install.sh  setup-aws.sh  setup-fargate.sh
services/: agent_service_OLD.py  file_upload_service.py  langgraph_agent_service_OLD.py
tests/: README.md  conftest.py  create_test_data.py  data_registry.json  results.json  run_integration_tests.py  run_tests.sh  test_bedrock_converse.py  test_bedrock_thinking_bug.py  test_bedrock_thinking_format.py  test_cases.json  test_claude_bedrock_api_key.py  test_config.yaml  test_doi_validation.py  test_expert_handoffs.py  test_genie_ai.py  test_geo.py  test_geo_detection.py  test_geo_geoparse.py  test_geo_provider.py  test_lobster.py  test_open_source.py  test_prompt_behavior.py  test_scvi_integration_validation.py  test_streamlit.sh  test_visualization_expert.py  tmp.json  tmp.txt
utils/: json_extractor.py  terminal_callback_handler.py
wiki/: 01-getting-started.md  02-installation.md  03-configuration.md  05-cli-commands.md  08-developer-overview.md  13-api-overview.md  16-services-api.md  18-architecture-overview.md  20-data-management.md  24-tutorial-bulk-rnaseq.md  28-troubleshooting.md  29-faq.md  30-glossary.md  31-data-expert-agent-enhancements.md  35-manual-annotation-service.md  36-supervisor-configuration.md  CLAUDE.md  Home.md  README.md
(+397 files in other folders)
