[build-system]
requires = ["setuptools>=42", "wheel", "build>=0.10.0", "packaging"]
build-backend = "setuptools.build_meta"

[project]
name = "lobster"
dynamic = ["version"]
authors = [
    {name = "Homara AI", email = "support@homara.ai"}
]
description = "Multi-Agent Bioinformatics Analysis System powered by LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
    "Framework :: FastAPI",
]
keywords = ["bioinformatics", "RNA-seq", "single-cell", "AI", "machine-learning", "data-analysis", "genomics"]
dependencies = [
    # Core
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "plotly>=5.0.0",
    "rich>=12.0.0",
    "typer>=0.7.0",
    "python-dotenv>=1.0.0",
    # LangChain and AI
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "langchain-aws>=0.1.0",
    "langgraph>=0.0.20",
    "openai>=1.0.0",
    # Bioinformatics (bumped versions for Python 3.12 support)
    "scanpy>=1.10.2", # was 1.9.3 — now supports Python 3.12
    "numba>=0.56.4", # ensures llvmlite >=0.39 (Python 3.12 support)
    "llvmlite>=0.39.0", # explicit to avoid old version being pulled
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "anndata>=0.9.0",
    "mudata>=0.2.0",
    "biopython>=1.81",
    "leidenalg>=0.9.0",
    "igraph>=0.10.4",
    "scrublet>=0.2.3",
    "h5py>=3.9.0",
    "tables>=3.8.0",
    # Visualization
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
    "kaleido>=0.2.0",
    # Data I/O
    "openpyxl>=3.1.0",
    "pyarrow>=12.0.0",
    "pyreadr>=0.4.0",
    # HTTP and utilities
    "requests>=2.31.0",
    "aiofiles>=23.0.0",
    "xmltodict>=0.13.0",
    "boto3>=1.26.0",
    # API support
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "scikit-misc>=0.5.1",
    "python-multipart>=0.0.20",
    "streamlit>=1.48.1",
    "GEOparse",
    "packaging>=25.0",
    "tabulate>=0.9.0",
    "streamlit-cognito-auth>=1.3.1",
    "aws-cdk-lib>=2.212.0",
    "langfuse>=3.2.6",
    "pytest>=8.4.1",
    "polars>=1.32.3",
    "psutil>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pylint>=2.17.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
    "bumpversion>=0.6.0",
    "twine>=4.0.0",
    "build>=0.10.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "langfuse>=2.0.0",
    "tabulate>=0.9.0",
    "ruff>=0.0.300",
]
all = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pylint>=2.17.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
    "bumpversion>=0.6.0",
    "twine>=4.0.0",
    "build>=0.10.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "langfuse>=2.0.0",
    "tabulate>=0.9.0",
]

[project.urls]
"Homepage" = "https://github.com/homara-ai/lobster"
"Bug Tracker" = "https://github.com/homara-ai/lobster/issues"
"Documentation" = "https://docs.lobster-ai.com"
"Source Code" = "https://github.com/homara-ai/lobster"
"Discord" = "https://discord.gg/homaraai"

[project.scripts]
lobster = "lobster.cli:app"

[tool.setuptools]
packages = ["lobster"]

[tool.setuptools.dynamic]
version = {attr = "lobster.version.__version__"}

[tool.setuptools.package-data]
lobster = ["**/*.json", "**/*.yaml", "**/*.yml"]

# Development tools configurations
[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=lobster --cov-report=term"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
